# Stonks-1

./: Dockerfile  config.toml  pyproject.toml
stonks/: dashboard.py
tests/: test_yahoo_puts.py
yahoo_puts/: dashboard.py  index.py
